--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-test-renderer": "^16.13.1"
   },
   "dependencies": {
+    "@loadable/component": "^5.13.1",
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
     "chokidar": "^3.4.0",
